tests/fail/mixed-contravariance-misuse.stderr
error: lifetime may not live long enough
 --> tests/fail/mixed-contravariance-misuse.rs:9:5
  |
6 | fn shorten<'b, 'short, 'long: 'short>(
  |                ------  ----- lifetime `'long` defined here
  |                |
  |                lifetime `'short` defined here
...
9 |     long_long.transcend_ref()
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^ cast requires that `'short` must outlive `'long`
  |
  = help: consider adding the following bound: `'short: 'long`
